# balandda-bot

./: .env.example  .gitignore  DEPLOY_GUIDE.md  Dockerfile  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
analysis/: report_samples.txt
api/: auth.py  main.py
api/routers/: admin_catalog.py  auth.py  bot_templates.py  bridge.py  categories.py  customers.py  daily_reports.py  prepayments.py  public.py  registration.py  reports.py  reservations.py  spa_schedule.py  stats.py  structured_reports.py  transactions.py  users.py  wallets.py
bot/: billz.py  config.py  main.py  notifications.py  owner_digest.py  parser.py  scheduler.py  utils.py
bot/handlers/: __init__.py  cash_flow.py  history.py  import_report.py  language.py  new_expense.py  new_report.py  prepayment.py  purchase.py  report.py  start.py  wallet.py  xush.py
bot/keyboards/: main.py
bot/locales/: __init__.py  ru.py  uz.py
db/: database.py  enums.py  hold_timing.py  models.py  reservation_sync.py  seed.py
db/migrations/: env.py
scripts/: billz_probe.sh  import_pool_2026.py  migrate_new_tables.sql
services/: beds24.py  customer_notify.py  iiko.py
tests/: test_locales.py
web/: ANALYTICS_DASHBOARD.md  FILE_STRUCTURE.txt  MANIFEST.md  QUICKSTART.md  README_ANALYTICS.md  index.html  package.json  tailwind.config.js
web/src/: App.jsx  api.js  index.css
web/src/components/: DashboardLayout.jsx  Layout.jsx
web/src/pages/: AdminBotTemplates.jsx  AdminMinibar.jsx  AdminProperties.jsx  AdminReports.jsx  AdminServiceCategories.jsx  AdminServices.jsx  (+22 more)
(+1 files in other folders)
