[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["bot*", "api*", "db*"]

[project]
name = "balandda-bot"
version = "0.1.0"
description = "Telegram bot & analytics dashboard for balandda.uz (resort + restaurant)"
requires-python = ">=3.11"

dependencies = [
    "aiogram>=3.13,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "asyncpg>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.14,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
